--- a/docs/config.json
+++ b/docs/config.json
@@ -1,7 +1,7 @@
 {
 	"title": "JDCL",
 	"tagline": "...",
-	"clean_urls": false,
+	"clean_urls": true,
 	"float": false,
 	"docs_path": "docs",
 	"image": "",
